# alda-python

./: .isort.cfg  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
alda/: client.py
src/alda/: __init__.py  bencode.py  client.py  core.py  interval.py  items.py  nrepl.py  pitch.py
tests/integration/: test_repl_ops.py
tests/unit/: test_bencode.py  test_core.py  test_items.py  test_pitch.py
