[metadata]
name = alda
version = 0.0.1
author = Nicola Vitucci
author_email = nicola.vitucci@gmail.com
description = Python client for Alda (https://alda.io/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nvitucci/alda-python
project_urls =
    Bug Tracker = https://github.com/nvitucci/alda-python/issues
    Source = https://github.com/nvitucci/alda-python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    nrepl-python-client

[options.packages.find]
where = src