[metadata]
name = alda-python
version = attr: alda.__version__
author = Nicola Vitucci
author_email = nicola.vitucci@gmail.com
description = Python client for Alda (https://alda.io/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nvitucci/alda-python
project_urls =
    Bug Tracker = https://github.com/nvitucci/alda-python/issues
    Source = https://github.com/nvitucci/alda-python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    tox

[semantic_release]
branch = main
version_source = tag
version_variable = src/alda/__init__.py:__version__
prerelease_tag = a
commit_version_number = true